--- a/fitting.ipynb
+++ b/fitting.ipynb
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "707e01fe",
+   "id": "b29b774d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,24 +69,24 @@
       "N for model data    :  70000\n",
       " \n",
       "Planetary parameters:\n",
-      "e       : 0.051808070535058814  [unitless]\n",
-      "omega   : 0.5926930861883118  [radians]\n",
-      "Omega   : 0.6228846014825858  [radians]\n",
-      "cos_i   : 0.09590947862585042  [unitless]\n",
-      "m_planet: 9.877355977413515  [Jupiter masses]\n",
-      "P_orb   : 0.7163163880302189  [years]\n",
-      "t_peri  : 0.35680097024947205  [years]\n",
+      "e           : 0.302912000589295  [unitless]\n",
+      "omega       : 4.313677832870261  [radians]\n",
+      "Omega       : 2.6435535652811666  [radians]\n",
+      "cos_i       : 0.12912894817108467  [unitless]\n",
+      "m_planet    : 0.9552856398248216  [Jupiter masses]\n",
+      "log10(P_orb): 0.0405557069420337  [log10(years)]\n",
+      "t_peri      : 0.3334655018688819  [years]\n",
       " \n",
       "Gaia parameters:\n",
-      "alpha0  : 1  [degrees]\n",
-      "delta0  : 2  [degrees]\n",
-      "mu_alpha: 13.538769285974364  [mas/year]\n",
-      "mu_delta: -182.83832022732648  [mas/year]\n",
-      "parallax: 50  [mas]\n",
-      "m_star  : 0.6569865189014348  [M_sun]\n",
-      "x =  247963\n",
+      "alpha0      : 1  [degrees]\n",
+      "delta0      : 2  [degrees]\n",
+      "mu_alpha    : 63.20071839452851  [mas/year]\n",
+      "mu_delta    : -81.25858742746935  [mas/year]\n",
+      "parallax    : 50  [mas]\n",
+      "m_star      : 0.1533814175442969  [M_sun]\n",
+      "x =  202554\n",
       " \n",
-      "astrometric_signature( [9.87735598] [0.65698652] [0.71631639] [20.] ) =  [499.41311552] [uas]\n"
+      "astrometric_signature( [0.95528564] [0.15338142] [0.04055571] [20.] ) =  [169.34622012] [uas]\n"
      ]
     }
    ],
@@ -141,11 +141,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "alpha0  : real=1.00000, fitted=0.99442, difference=0.00558\n",
-      "delta0  : real=2.00000, fitted=2.00915, difference=0.00915\n",
-      "mu_alpha: real=13.53877, fitted=13.53765, difference=0.00112\n",
-      "mu_delta: real=-182.83832, fitted=-182.83209, difference=0.00623\n",
-      "parallax: real=50.00000, fitted=50.01203, difference=0.01203\n"
+      "alpha0  : real=1.00000, fitted=1.00599, difference=0.00599\n",
+      "delta0  : real=2.00000, fitted=1.99661, difference=0.00339\n",
+      "mu_alpha: real=63.20072, fitted=63.19964, difference=0.00108\n",
+      "mu_delta: real=-81.25859, fitted=-81.25577, difference=0.00282\n",
+      "parallax: real=50.00000, fitted=49.99719, difference=0.00281\n"
      ]
     }
    ],
@@ -157,38 +157,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "19d58e2f",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/audreyburggraf/Desktop/THESIS/Functions/functions.py:457: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  a = (P**2 * m_star)**(1/3) # [AU]\n",
-      "/Users/audreyburggraf/Desktop/THESIS/Functions/functions.py:144: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  sin_i = np.sqrt(1 - cos_i**2)  # [unitless]\n",
-      "/Users/audreyburggraf/Desktop/THESIS/Functions/functions.py:189: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  Y = np.sqrt((1-e**2))*sin(E) # [unitless]\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "alpha0  : real=1.00000, fitted=0.99797, difference=0.00203\n",
-      "delta0  : real=2.00000, fitted=2.01308, difference=0.01308\n",
-      "mu_alpha: real=13.53877, fitted=13.53585, difference=0.00292\n",
-      "mu_delta: real=-182.83832, fitted=-182.83857, difference=0.00025\n",
-      "parallax: real=50.00000, fitted=50.01054, difference=0.01054\n",
-      "e       : real=0.05181, fitted=0.99850, difference=0.94669\n",
-      "omega   : real=0.59269, fitted=9.43292, difference=8.84023\n",
-      "Omega   : real=0.62288, fitted=1.12628, difference=0.50339\n",
-      "cos_i   : real=0.09591, fitted=-44.93601, difference=45.03192\n",
-      "m_planet: real=9.87736, fitted=0.50212, difference=9.37523\n",
-      "P_orb   : real=0.71632, fitted=2.79570, difference=2.07938\n",
-      "t_peri  : real=0.35680, fitted=0.40592, difference=0.04912\n"
+      "alpha0      : real=1.00000, fitted=1.00173, difference=0.00173\n",
+      "delta0      : real=2.00000, fitted=2.00170, difference=0.00170\n",
+      "mu_alpha    : real=63.20072, fitted=63.20094, difference=0.00022\n",
+      "mu_delta    : real=-81.25859, fitted=-81.25639, difference=0.00220\n",
+      "parallax    : real=50.00000, fitted=49.97702, difference=0.02298\n",
+      "e           : real=0.30291, fitted=0.81723, difference=0.51432\n",
+      "omega       : real=4.31368, fitted=7.70971, difference=3.39604\n",
+      "Omega       : real=2.64355, fitted=1.15582, difference=1.48773\n",
+      "cos_i       : real=0.12913, fitted=0.00356, difference=0.12557\n",
+      "m_planet    : real=0.95529, fitted=0.02845, difference=0.92684\n",
+      "log10(P_orb): real=0.04056, fitted=0.01447, difference=0.02609\n",
+      "t_peri      : real=0.33347, fitted=0.31624, difference=0.01723\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/audreyburggraf/Desktop/THESIS/Functions/functions.py:472: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  a = (P_orb**2 * m_star)**(1/3)\n"
      ]
     }
    ],
@@ -200,17 +198,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "730380cd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1147.7975566270302, 410.2410951933886, 737.5564614336415, array([0]))"
+       "(155.00892437562246, 177.75830198867925, 22.749377613056794, array([0]))"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f9ea2fa",
+   "id": "1b1da04e",
    "metadata": {},
    "outputs": [],
    "source": []
