now switching log(m) almost working

--- a/fitting.ipynb
+++ b/fitting.ipynb
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b29b774d",
+   "id": "5dabdf02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,28 +65,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "N for synthetic data:  70\n",
-      "N for model data    :  70000\n",
-      " \n",
       "Planetary parameters:\n",
-      "e           : 0.302912000589295  [unitless]\n",
-      "omega       : 4.313677832870261  [radians]\n",
-      "Omega       : 2.6435535652811666  [radians]\n",
-      "cos_i       : 0.12912894817108467  [unitless]\n",
-      "m_planet    : 0.9552856398248216  [Jupiter masses]\n",
-      "log10(P_orb): 0.0405557069420337  [log10(years)]\n",
-      "t_peri      : 0.3334655018688819  [years]\n",
+      "e           : 0.13003744369330628  [unitless]\n",
+      "omega       : 5.813494981781561  [radians]\n",
+      "Omega       : 3.9104750247099913  [radians]\n",
+      "cos_i       : 0.48417338181696956  [unitless]\n",
+      "m_planet    : 0.34603994707664776  [Jupiter masses]\n",
+      "log10(P_orb): 0.03807756303253029  [log10(years)]\n",
+      "t_peri      : 0.6801331664876508  [years]\n",
       " \n",
       "Gaia parameters:\n",
       "alpha0      : 1  [degrees]\n",
       "delta0      : 2  [degrees]\n",
-      "mu_alpha    : 63.20071839452851  [mas/year]\n",
-      "mu_delta    : -81.25858742746935  [mas/year]\n",
+      "mu_alpha    : -2.897642821950277  [mas/year]\n",
+      "mu_delta    : -12.29304229257255  [mas/year]\n",
       "parallax    : 50  [mas]\n",
-      "m_star      : 0.1533814175442969  [M_sun]\n",
-      "x =  202554\n",
-      " \n",
-      "astrometric_signature( [0.95528564] [0.15338142] [0.04055571] [20.] ) =  [169.34622012] [uas]\n"
+      "m_star      : 0.2203081678177399  [M_sun]\n",
+      "x =  149186\n"
      ]
     }
    ],
@@ -141,11 +136,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "alpha0  : real=1.00000, fitted=1.00599, difference=0.00599\n",
-      "delta0  : real=2.00000, fitted=1.99661, difference=0.00339\n",
-      "mu_alpha: real=63.20072, fitted=63.19964, difference=0.00108\n",
-      "mu_delta: real=-81.25859, fitted=-81.25577, difference=0.00282\n",
-      "parallax: real=50.00000, fitted=49.99719, difference=0.00281\n"
+      "alpha0  : real=1.00000, fitted=1.04117, difference=0.04117\n",
+      "delta0  : real=2.00000, fitted=1.99116, difference=0.00884\n",
+      "mu_alpha: real=-2.89764, fitted=-2.89658, difference=0.00106\n",
+      "mu_delta: real=-12.29304, fitted=-12.28917, difference=0.00388\n",
+      "parallax: real=50.00000, fitted=49.99530, difference=0.00470\n"
      ]
     }
    ],
@@ -167,26 +162,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "alpha0      : real=1.00000, fitted=1.00173, difference=0.00173\n",
-      "delta0      : real=2.00000, fitted=2.00170, difference=0.00170\n",
-      "mu_alpha    : real=63.20072, fitted=63.20094, difference=0.00022\n",
-      "mu_delta    : real=-81.25859, fitted=-81.25639, difference=0.00220\n",
-      "parallax    : real=50.00000, fitted=49.97702, difference=0.02298\n",
-      "e           : real=0.30291, fitted=0.81723, difference=0.51432\n",
-      "omega       : real=4.31368, fitted=7.70971, difference=3.39604\n",
-      "Omega       : real=2.64355, fitted=1.15582, difference=1.48773\n",
-      "cos_i       : real=0.12913, fitted=0.00356, difference=0.12557\n",
-      "m_planet    : real=0.95529, fitted=0.02845, difference=0.92684\n",
-      "log10(P_orb): real=0.04056, fitted=0.01447, difference=0.02609\n",
-      "t_peri      : real=0.33347, fitted=0.31624, difference=0.01723\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/audreyburggraf/Desktop/THESIS/Functions/functions.py:472: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  a = (P_orb**2 * m_star)**(1/3)\n"
+      "alpha0      : real=1.00000, fitted=1.04608, difference=0.04608\n",
+      "delta0      : real=2.00000, fitted=1.99807, difference=0.00193\n",
+      "mu_alpha    : real=-2.89764, fitted=-2.89501, difference=0.00264\n",
+      "mu_delta    : real=-12.29304, fitted=-12.29220, difference=0.00084\n",
+      "parallax    : real=50.00000, fitted=49.99311, difference=0.00689\n",
+      "e           : real=0.13004, fitted=-0.98338, difference=1.11342\n",
+      "omega       : real=5.81349, fitted=4.74747, difference=1.06602\n",
+      "Omega       : real=3.91048, fitted=2.98333, difference=0.92715\n",
+      "cos_i       : real=0.48417, fitted=-0.03841, difference=0.52259\n",
+      "m_planet    : real=0.34604, fitted=0.77572, difference=0.42968\n",
+      "log10(P_orb): real=0.03808, fitted=0.26878, difference=0.23070\n",
+      "t_peri      : real=0.68013, fitted=0.50426, difference=0.17587\n"
      ]
     }
    ],
@@ -198,30 +185,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "730380cd",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "np_BIC = 539.9636528315746\n",
+      "wp_BIC = 290.97320773938316\n",
+      "Delta_BIC = 248.9904450921914\n",
+      "detection (yes = 1, no=0) = 0\n",
+      "conditions satisfied (Delta BIC>20, log(P) within err, mass within err) = [1 0 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "detection_result = detection_function(np_chi_sq, wp_chi_sq, inj_params_1P, fitted_params_1P, N1)\n",
+    "\n",
+    "\n",
+    "print(\"np_BIC =\", detection_result[0])\n",
+    "print(\"wp_BIC =\", detection_result[1])\n",
+    "print(\"Delta_BIC =\", detection_result[2])\n",
+    "print(\"detection (yes = 1, no=0) =\", detection_result[3])\n",
+    "print(\"conditions satisfied (Delta BIC>20, log(P) within err, mass within err) =\", detection_result[4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "54ce14a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(567.8557207772806, 208.9606174454837, 358.89510333179686, 0, array([1, 0, 0]))\n",
+      "run # 0  conditions_satisfied: [1 0 0]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "(155.00892437562246, 177.75830198867925, 22.749377613056794, array([0]))"
+       "[0]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "detection_result = detection_function(np_chi_sq, wp_chi_sq, inj_params_1P, fitted_params_1P, N1)\n",
+    "N1 = 70\n",
+    "N2 = 70000\n",
+    "\n",
+    "seed = 8\n",
+    "\n",
+    "detection_result = multiple_fitting_function(df, N1, N2, 1)\n",
     "detection_result"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b1da04e",
+   "id": "bb70207c",
    "metadata": {},
    "outputs": [],
    "source": []
