day my monitor broke

--- a/EQUATIONS.ipynb
+++ b/EQUATIONS.ipynb
@@ -28,13 +28,18 @@
    "id": "308b1ca5",
    "metadata": {},
    "source": [
-    "### $a [AU]  =\\left(P^2\\cdot m_*\\right)^{1/3}$"
+    "### $ P^2 = \\frac{1}{m_*}a^3$\n",
+    "### $ P^2 \\times m_* = a^3$\n",
+    "\n",
+    "### $a [AU]  =\\left(P^2\\times m_*\\right)^{1/3}$"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "675e9f7d",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e43d328",
    "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
