April 10 - after 4th conditon

--- a/multiple_fitting.ipynb
+++ b/multiple_fitting.ipynb
@@ -43,34 +43,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "af9e32a4",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Run # 0  Detection: 0 Conditions satisfied: [1 1 0]\n",
-      "Run # 1  Detection: 0 Conditions satisfied: [1 1 0]\n",
-      "Run # 2  Detection: 1 Conditions satisfied: [1 1 1]\n",
-      "Run # 3  Detection: 1 Conditions satisfied: [1 1 1]\n",
-      "Run # 4  Detection: 0 Conditions satisfied: [1 1 0]\n",
-      "Run # 5  Detection: 0 Conditions satisfied: [1 1 0]\n",
-      "Run # 6  Detection: 1 Conditions satisfied: [1 1 1]\n",
-      "Run # 7  Detection: 0 Conditions satisfied: [1 1 0]\n",
-      "Run # 8  Detection: 0 Conditions satisfied: [1 1 0]\n",
-      "Run # 9  Detection: 0 Conditions satisfied: [1 1 0]\n",
-      "Run # 10  Detection: 0 Conditions satisfied: [1 1 0]\n",
-      "Run # 11  Detection: 1 Conditions satisfied: [1 1 1]\n",
-      "Run # 12  Detection: 0 Conditions satisfied: [1 1 0]\n",
-      "Run # 13  Detection: 0 Conditions satisfied: [0 1 1]\n",
-      "Run # 14  Detection: 0 Conditions satisfied: [1 1 0]\n",
-      "Run # 15  Detection: 0 Conditions satisfied: [1 1 0]\n",
-      "Run # 16  Detection: 0 Conditions satisfied: [1 1 0]\n",
-      "Run # 17  Detection: 0 Conditions satisfied: [1 1 0]\n",
-      "Run # 18  Detection: 0 Conditions satisfied: [1 1 0]\n",
-      "Run # 19  Detection: 0 Conditions satisfied: [1 1 0]\n"
+      "100%|███████████████████████████████████████████████| 10000/10000 [5:35:06<00:00,  2.01s/it]\n"
      ]
     }
    ],
@@ -80,22 +61,14 @@
     "N1 = 70\n",
     "N2 = 70000\n",
     "\n",
-    "num_of_runs = 20\n",
+    "num_of_runs = 10000\n",
     "\n",
     "detection_result = multiple_fitting_function(df, N1, N2, \n",
-    "                                             num_of_runs, \n",
+    "                                             num_of_runs,\n",
+    "                                             'bigrun_10000_after_changes.csv',\n",
     "                                             save_to_file = True, \n",
-    "                                             print_detection_results = True) \n",
-    "detection_result"
+    "                                             print_detection_results = False) "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "10f31d3b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
